{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 278,
  "lineage": "09473775-0f7f-e625-e5d1-9d91d02cb0ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "diplom_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:665302127377:instance/i-0c5443c998b8c7821",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5443c998b8c7821",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "netology",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098d5d5db5c59e8bc",
            "private_dns": "ip-10-0-101-12.us-east-2.compute.internal",
            "private_ip": "10.0.101.12",
            "public_ip": "18.119.135.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:665302127377:key/b159a118-ba62-4e44-a759-4e587dd25626",
                "throughput": 0,
                "volume_id": "vol-0731e8c6290e50542",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0438cfaba4afba8c5",
            "tags": {
              "Name": "Diplom Netology"
            },
            "tags_all": {
              "Name": "Diplom Netology"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd141373ce6a209f"
            ]
          },
          "dependencies": [
            "aws_key_pair.netology",
            "aws_security_group.diplom_sec_group",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:665302127377:instance/i-088236048c315fc3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088236048c315fc3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "netology",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb605ef3edc43796",
            "private_dns": "ip-10-0-101-246.us-east-2.compute.internal",
            "private_ip": "10.0.101.246",
            "public_ip": "3.141.45.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:665302127377:key/b159a118-ba62-4e44-a759-4e587dd25626",
                "throughput": 0,
                "volume_id": "vol-01c41a48359334469",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0438cfaba4afba8c5",
            "tags": {
              "Name": "Diplom Netology"
            },
            "tags_all": {
              "Name": "Diplom Netology"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd141373ce6a209f"
            ]
          },
          "dependencies": [
            "aws_key_pair.netology",
            "aws_security_group.diplom_sec_group",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:665302127377:instance/i-02d0497c6f1787c88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d0497c6f1787c88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "netology",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0010336d437b185a9",
            "private_dns": "ip-10-0-101-124.us-east-2.compute.internal",
            "private_ip": "10.0.101.124",
            "public_ip": "13.58.217.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:665302127377:key/b159a118-ba62-4e44-a759-4e587dd25626",
                "throughput": 0,
                "volume_id": "vol-043103f3c5a770b30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0438cfaba4afba8c5",
            "tags": {
              "Name": "Diplom Netology"
            },
            "tags_all": {
              "Name": "Diplom Netology"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd141373ce6a209f"
            ]
          },
          "dependencies": [
            "aws_key_pair.netology",
            "aws_security_group.diplom_sec_group",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "diplom_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:security-group/sg-0cd141373ce6a209f",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd141373ce6a209f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_http_and_ssh",
            "name_prefix": "",
            "owner_id": "665302127377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d003f8fbcb12e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:internet-gateway/igw-0187b4acd264e03a1",
            "id": "igw-0187b4acd264e03a1",
            "owner_id": "665302127377",
            "tags": {
              "Environment": "stage",
              "Name": "diplom_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "diplom_vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d003f8fbcb12e2da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0187b4acd264e03a1",
            "id": "r-rtb-0457e7b3dcc4764cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0457e7b3dcc4764cd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:route-table/rtb-0457e7b3dcc4764cd",
            "id": "rtb-0457e7b3dcc4764cd",
            "owner_id": "665302127377",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "stage",
              "Name": "diplom_vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "diplom_vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d003f8fbcb12e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0859dce2fb87c1a30",
            "route_table_id": "rtb-0457e7b3dcc4764cd",
            "subnet_id": "subnet-0438cfaba4afba8c5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:subnet/subnet-0438cfaba4afba8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0438cfaba4afba8c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665302127377",
            "tags": {
              "Environment": "stage",
              "Name": "diplom_vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "diplom_vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d003f8fbcb12e2da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:vpc/vpc-0d003f8fbcb12e2da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3581b6c598216e9",
            "default_route_table_id": "rtb-0b4da9d0f12a1a33a",
            "default_security_group_id": "sg-0837da33414c3de9f",
            "dhcp_options_id": "dopt-02d3c9711513fa09a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d003f8fbcb12e2da",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b4da9d0f12a1a33a",
            "owner_id": "665302127377",
            "tags": {
              "Environment": "stage",
              "Name": "diplom_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "diplom_vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}